Font Awesome; Thumbs Up icon for voting btn;

--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-resource": "1.*",
     "angular-route": "1.*",
     "bootstrap": "3.*",
+    "font-awesome": "4.*",
     "crypto-js": "http://crypto-js.googlecode.com/files/CryptoJS%20v3.1.2.zip"
   }
 }
