--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,6 @@
     "angular-route": "1.*",
     "bootstrap": "3.*",
     "font-awesome": "4.*",
-    "crypto-js": "3.1.2"
+    "crypto-js": "3.*"
   }
 }
